# django-elasticsearch-dsl-celery

./: README.md  pyproject.toml
django_elasticsearch_dsl_celery/: __init__.py
