[tool.poetry]
name = "django-elasticsearch-dsl-celery-processor"
version = "1.2.0"
description = "Allows automatic updates on the index as delayed background tasks using Celery"
authors = ["Abdelhadi Abu-Shamleh <abushamleh92@gmail.com>"]
license = "BSD"
readme = "README.md"
packages = [{include = "django_elasticsearch_dsl_celery"}]

[tool.poetry.dependencies]
python = ">=3.7.0"
Django = ">=3.2.0"
celery = ">=5.1.0"
django-elasticsearch-dsl = ">=7.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.230"
black = {extras = ["d"], version = "^22.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "Q", "D"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "google"